フォント反映、labelの色変えた

--- a/pppppp/Info.plist
+++ b/pppppp/Info.plist
@@ -81,7 +81,7 @@
 		<string></string>
 	</array>
 	<key> item1</key>
-	<string>f5_6_0110</string>
+	<string>F5.6-Regular.otf</string>
 	<key>NSCameraUsageDescription</key>
 	<string></string>
 </dict>
